lib_LTLIBRARIES = libloomlib.la

libloomlib_la_SOURCES = \
  async_list.c          \
  async_queue.c         \
  pipeline.c            \
  queue.c               \
  thread_pool.c         \
  tree.c

pkginclude_HEADERS =  \
  async_list.h        \
  async_queue.h       \
  pipeline.h          \
  queue.h             \
  thread_pool.h       \
  tree.h
