AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libloomlib.la

libloomlib_la_SOURCES = \
  alpha_queue.c         \
  async_list.c          \
  async_queue.c         \
  beta_queue.c          \
  cache.c               \
  gamma_queue.c         \
  lock.c                \
  pipeline.c            \
  queue.c               \
  thread_pool.c         \
  tree.c
