AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libloomlib.la

libloomlib_la_SOURCES = \
  alpha_queue.c         \
  async_list.c          \
  async_queue.c         \
  barrier.c             \
  barrier.h             \
  beta_queue.c          \
  cache.c               \
  gamma_queue.c         \
  lock.c                \
  lock.h                \
  pipeline.c            \
  queue.c               \
  thread_pool.c         \
  tree.c
